loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2010 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by release number:

-------------------------------------------------------
changes since 1.5.4 release:

- Corrected several sources of significant phase errors in 
synthesis, and in phase reporting from analysis data.

- Improved the Resampler implementation of Breakpoint time
quantization (previously called "sparse resampling"), no longer
adding extra Breakpoints unpredictably to lessen differences 
between the original and resampled envelopes. 

- Added capability to perform logarithmic frequency morphing --
log or linear morphing can be selected independently for both 
amplitude/bandwidth and frequency envelopes. (This might be 
especially useful if you are morphing two different pitches to
obtain a third pitch.)

- Cleaned up Filter interface and implementation, made it more
consistent with other common tools (like Matlab and scipy). 

- Added a Parameters struct to the Synthesizer class that can
be used to specify a full configuration of the Synthesizer. 

- Added a default parameter set to the class, which can be
modified to change the default Synthesizer configuration (used
by AiffFile, for example, to render Partials). 

- Added access to the Filter used by bandwidth-enhanced 
Oscillators through the Synthesizer class, as well as the
Oscillator class, so that different filters can be designed
and employed in bandwidth enhanced synthesis.

- Added access to global default synthesis parameters through
loris.SynthesisParameters in the Python interface.

-------------------------------------------------------
changes since 1.5.3 release:

- Fixed a bug involving the use of the nonstandard extension
std::isfinite that prevented compilation with some compilers.
